# ASCIIMMO

./: .gitignore  CMakeLists.txt  DATABASE.md  README.md  launch_services.sh  shutdown_services.sh  test_registration.sh  test_token_broadcast.sh  test_token_validation.sh
certs/: server.crt  server.key
client/: app.js  index.html  package.json  server.js
client/proto/: auth_pb.js  session_pb.js  social_pb.js  world_pb.js
config/: services.yaml
docs/: SERVICE_CONFIG.md
include/: db_config.hpp  db_pool.hpp  server_http.hpp  worldgen.hpp
include/shared/: email_sender.hpp  http_client.hpp  http_server.hpp  logger.hpp  password_hash.hpp  service_config.hpp  token_cache.hpp
include/shared/proto/: auth.pb.h  social.pb.h  world.pb.h
proto/: auth.proto  session.proto  social.proto  world.proto
sql/: create_admin_user.sql  export_config.sh  schema.sql  set_user_flags.sh  setup_db.sh
sql/migrations/: 001_add_user_flags.sql  002_add_salt_column.sql  003_add_email_confirmation_tokens.sql  004_convert_to_bigint.sql
src/: auth_service.cpp  db_config.cpp  db_pool.cpp  main.cpp  server_http.cpp  session_service.cpp  social_service.cpp  world_service.cpp  worldgen.cpp
src/proto/: auth.pb.cc  session.pb.cc  session.pb.h  social.pb.cc
src/shared/: http_server.cpp
src/shared/proto/: world.pb.cc
tests/: auth_database_test.cpp  auth_service_test.cpp  database_test.cpp  session_database_test.cpp  session_service_test.cpp  social_database_test.cpp  social_service_test.cpp  token_cache_test.cpp  world_service_test.cpp  worldgen_test.cpp
